css update to avoid headline overlap

--- a/financial-disclosures/main.css
+++ b/financial-disclosures/main.css
@@ -96,15 +96,15 @@ overflow-x: hidden;
     position: absolute;
     top: 50%;
     color: #ffffff;
-    text-shadow: 1px 1px 2px black;
+    text-shadow: 2px 2px 3px black;
     width: 100%;
 }
 
 .top_sub_2 {
     position: absolute;
-    top: 60%;
+    top: 68%;
     color: #ffffff;
-    text-shadow: 1px 1px 2px black;
+    text-shadow: 2px 2px 3px black;
     width: 100%;
 }
 
@@ -121,6 +121,7 @@ overflow-x: hidden;
 p {
     line-height: 1.5em;
     margin-top: 10px;
+    font-size: 1.2em;
 }
 
 .text {
@@ -139,15 +140,16 @@ p {
 }
 
 .buttons {
-    /*border-top: 2em;*/
-    border-bottom: 2em;
-    border-color: #e7e7e7;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    border: .2em;
+    border-color: #568ea3;
     border-style: solid;
     background-color: #568ea3;
 }
 
 button {
-    font-size: 1.1em;
+    font-size: 1.2em;
     border-style: solid;
     border-color: black;
     background-color: #e7e7e7;
